# ngn

./: .gitignore  Cargo.toml  LICENSE  Makefile  QUICKSTART.md  README.md  RELEASING.md  build.rs  install.sh
.github/workflows/: ci.yml  release-lsp.yml  release.yml
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs
crates/lsp/vscode/: language-configuration.json  package.json  tsconfig.json
crates/lsp/vscode/client/src/: extension.ts
crates/lsp/vscode/syntaxes/: ngn.tmLanguage.json
crates/ngn/: Cargo.toml  build.rs
crates/ngn/src/: analyzer.rs  ast.rs  blocking_pool.rs  bytecode.rs  compiler.rs  env.rs  error.rs  expr_parser.rs  lexer.rs  lib.rs  llama_bridge.cpp  llama_bridge.h  main.rs  parser.rs  runtime.rs  semantic.rs  types.rs  utils.rs  value.rs  vm.rs
crates/ngn/src/toolbox/: core.rs  encoding.rs  http.rs  io.rs  llm.rs  math.rs  mod.rs  pool.rs  process.rs  signatures.rs  test.rs
crates/ngn/tests/: global_immutability.rs  spawn_pools.rs
docs/: astro.config.mjs
docs/public/: install.sh
docs/src/assets/: ngn.tmLanguage.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/deploy/: index.md
editors/vscode/: LICENSE  language-configuration.json  package.json  tsconfig.json
editors/vscode/client/src/: extension.ts
editors/vscode/syntaxes/: ngn.tmLanguage.json
src/: analyzer.rs  ast.rs  bytecode.rs  compiler.rs  error.rs  expr_parser.rs  lexer.rs  lib.rs  main.rs  ngn.lalrpop  parser.rs  utils.rs  value.rs  vm.rs
src/toolbox/: math.rs  mod.rs
tests/: import_enum_alias_fail_main.ngn  import_name_conflict_main.ngn  import_role_alias_fail_main.ngn  import_roles_enums_main.ngn  import_types_models_main.ngn  main.ngn  module.ngn  module2.ngn  module_export_name_conflict.ngn  module_roles_enums.ngn  module_types_models.ngn  test_llm_fake.ngn  test_process_run.ngn  test_process_stream.ngn  test_process_stream_raw.ngn  test_thread_capture_snapshot.ngn  test_thread_state_shared.ngn
(+29 files in other folders)
