[package]
name = "ngn"
version.workspace = true
edition.workspace = true
default-run = "ngn"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
regex = "1.10"
rustls = "0.23"
rustls-pemfile = "2.0"
ctrlc = "3.4"
crossbeam-channel = "0.5"
num_cpus = "1.16"
tokio = { version = "1", features = ["full"] }
