[package]
name = "ngn"
version.workspace = true
edition.workspace = true
default-run = "ngn"

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
regex = "1.10"
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
tokio-rustls = { version = "0.26", optional = true }
ctrlc = "3.4"
crossbeam-channel = "0.5"
num_cpus = "1.16"
tokio = { version = "1", features = ["full"], optional = true }
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["blocking"], optional = true }
urlencoding = "2.1.3"
indexmap = { version = "2.0", features = ["serde"] }
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"
chrono = "0.4"

[features]
default = ["core", "http", "os", "fetch"]
llm = []
http = ["dep:tokio", "dep:rustls", "dep:rustls-pemfile", "dep:tokio-rustls"]
os = []
core = []
fetch = ["dep:reqwest"]
